Optimize calls and add unit tests Signed-off-by: TOURI ANIS <anis-1.touri@rte-france.com>